# rust-password-generator

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml
src/: main.rs  password_generator.rs
